--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+
+    <title>Course LMS Hub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <br>
+    <h1 style="text-align:center"> Course LMS Hub </h1>
+    </br>
     <div id="root"></div>
     <!--
       This HTML file is a template.
