--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <br>
-    <h1 style="text-align:center"> Course LMS Hub </h1>
-    </br>
+    
+    <!-- <h1 style="text-align:center"> Course LMS Hub </h1> -->
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
