Make code dynamic. Add extend card feature. Add checkboxes

--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,16 @@
       crossorigin="anonymous"
     />
 
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
     <title>Course LMS Hub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+
     <!-- <h1 style="text-align:center"> Course LMS Hub </h1> -->
-    
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
